--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,22 +1,16 @@
-<h1>Display your Pirate here</h1>
+<h1>Pirates</h1>
 
-<h1>Pirate's Info:</h1>
+<div class="pirate">
+  <h3>Name: <%= @pirate.name %></h3><br>
+  <h4>Weight: <%= @pirate.weight %> pounds</h4><br>
+  <h4>Height: <%= @pirate.height %> inches</h4>
+</div><br>
 
- <div class="pirate">
- <h3>Pirate's Name: <%= @pirate.name%></h3>
- <h3>Pirate's Weight: <%= @pirate.weight%></h3>
- <h3>Pirate's Height: <%=@pirate.height%></h3>
- </div>
- <br>
-
-
-<h1>Pirate's ships</h1>
-<h2>Display your first ship here</h2>
-
-<% @ships.each do |ship|%>
+<h1>Ships</h1>
+<% @ships.each do |ship| %>
   <div class="ship">
-    <p>Ship Name: <%= ship.name%></p>
-    <p>Ship Type: <%= ship.type%></p>
-    <p>Ship Booty: <%= ship.booty%></p>
+    <p>Name: <%= ship.name %></p><br>
+    <p>Type: <%= ship.type %></p><br>
+    <p>Booty: <%= ship.booty %></p>
   </div><br>
-  <% end %>
+<% end %>
