--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,23 @@
 <h1>Make your form here</h1>
+
+<form action="/pirates" method="POST">
+  <label>Pirate Name:</label>
+    <input type="text" name="pirate[name]"><br>
+  <label>Pirate Weight:</label>
+    <input type="text" name="pirate[weight]"><br>
+  <label>Pirate Height:</label>
+    <input type="text" name="pirate[height]"><br>
+  <label>Ship 1 Name: </label>
+    <input id="ship_name_1" type="text" name="pirate[ships][][name]"><br>
+  <label>Ship 1 Type: </label>
+    <input id="ship_type_1" type="text" name="pirate[ships][][type]"><br>
+  <label>Ship 1 Booty: </label>
+    <input id="ship_booty_1" type="text" name="pirate[ships][][booty]"><br>
+  <label>Ship 2 Name: </label>
+    <input id="ship_name_2" type="text" name="pirate[ships][][name]"><br>
+  <label>Ship 2 Type: </label>
+    <input id="ship_type_2" type="text" name="pirate[ships][][type]"><br>
+  <label>Ship 2 Booty: </label>
+    <input id="ship_booty_2" type="text" name="pirate[ships][][booty]"><br>
+  <input type="submit" id="Submit">
+</form>
