--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,23 @@
-<h1>Display your Pirate here</h1>
+<h1>YOUR PIRATE INFO</h1>
 
+<!-- <h1>Display your Pirate here</h1> -->
+  <h1>Pirate's Info:</h1>
 
-<h2>Display your first ship here</h2>
+  <div class="pirate">
+  <h3>Pirate's Name: <%= @pirate.name%></h3>
+  <h3>Pirate's Weight: <%= @pirate.weight%></h3>
+  <h3>Pirate's Height: <%=@pirate.height%></h3>
+  </div>
+  <br>
 
+  <h1>Pirate's ships</h1>
+<!-- <h2>Display your first ship here</h2> -->
+  <% @ships.each do |ship|%>
+  <div class="ship">
+    <p>Ship Name: <%= ship.name%></p>
+    <p>Ship Type: <%= ship.type%></p>
+    <p>Ship Booty: <%= ship.booty%></p>
+  </div><br>
+  <% end %>
 
-<h2>Display your second ship here</h2>
+<!-- <h2>Display your second ship here</h2> -->
